objects/Web_Activity__c.object
<CustomObject>
    <description>Table used to store contact web history data</description>
    <label>Web Activity</label>
    <nameField>
        <displayFormat>{dd}{mm}{yy}{0000000000}</displayFormat>
        <label>WebActivityID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Web Activity</relationshipLabel>
        <relationshipName>R00N30000001FDfGEAW</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Visited__c</fullName>
        <label>Date Visited</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>web_act_Product_Line__c</fullName>
        <label>Product Line</label>
        <length>4</length>
        <type>Text</type>
    </fields>
</CustomObject>